# iptv

./: .gitignore  README.md  events.m3u8  fetch.py  pyproject.toml
.github/workflows/: scrape.yml
caches/: timstrms-api.json  timstrms.json
iptv-scraper/: fetch.py
iptv-scraper/scrapers/: timstreams.py
iptv-scraper/scrapers/utils/: caching.py  config.py  leagues.json  stealth.js  webwork.py
scrapers/: __init__.py
scrapers/utils/: easylist.txt  logger.py
