[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "iptv-scraper"
version = "0.1.0"
description = "Live sports IPTV M3U8 scraper"
requires-python = ">=3.12"

dependencies = [
    "httpx[http2]>=0.27",
    "playwright>=1.44",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scrapers*"]

[tool.ruff]
line-length = 100
target-version = "py312"
